client/mysqldump.c
@@ -1273,120 +1273,68 @@ static int switch_character_set_results(MYSQL *mysql, const char *cs_name)
 }
 
 /**
-  Rewrite CREATE TRIGGER statement, enclosing DEFINER clause in
-  version-specific comment.
+  Rewrite statement, enclosing DEFINER clause in version-specific comment.
 
-  This function parses the CREATE TRIGGER statement and encloses
-  DEFINER-clause in version-specific comment:
-    input query:     CREATE DEFINER=a@b TRIGGER ...
-    rewritten query: CREATE * / / *!50017 DEFINER=a@b * / / *!50003 TRIGGER ...
-
-  @note This function will go away when WL#3995 is implemented.
-
-  @param[in] trigger_def_str    CREATE TRIGGER statement string.
-  @param[in] trigger_def_length length of the trigger_def_str.
-
-  @return pointer to the new allocated query string.
-*/
-
-static char *cover_definer_clause_in_trigger(const char *trigger_def_str,
-                                             uint trigger_def_length)
-{
-  char *query_str= NULL;
-  char *definer_begin= my_case_str(trigger_def_str, trigger_def_length,
-                                   C_STRING_WITH_LEN(" DEFINER"));
-  char *definer_end;
-
-  if (!definer_begin)
-    return NULL;
-
-  definer_end= my_case_str(definer_begin, strlen(definer_begin),
-                           C_STRING_WITH_LEN(" TRIGGER"));
-
-  if (definer_end)
-  {
-    char *query_str_tail;
-
-    /*
-       Allocate memory for new query string: original string
-       from SHOW statement and version-specific comments.
-     */
-    query_str= alloc_query_str(trigger_def_length + 23);
-
-    query_str_tail= strnmov(query_str,
-                            trigger_def_str,
-                            definer_begin - trigger_def_str);
-
-    query_str_tail= strmov(query_str_tail,
-                           "*/ /*!50017");
-
-    query_str_tail= strnmov(query_str_tail,
-                            definer_begin,
-                            definer_end - definer_begin);
-
-    query_str_tail= strxmov(query_str_tail,
-                            "*/ /*!50003",
-                            definer_end,
-                            NullS);
-  }
-
-  return query_str;
-}
-
-/**
-  Rewrite CREATE FUNCTION or CREATE PROCEDURE statement, enclosing DEFINER
-  clause in version-specific comment.
-
-  This function parses the CREATE FUNCTION | PROCEDURE statement and
-  encloses DEFINER-clause in version-specific comment:
+  This function parses any CREATE statement and encloses DEFINER-clause in
+  version-specific comment:
     input query:     CREATE DEFINER=a@b FUNCTION ...
     rewritten query: CREATE * / / *!50020 DEFINER=a@b * / / *!50003 FUNCTION ...
 
   @note This function will go away when WL#3995 is implemented.
 
-  @param[in] def_str        CREATE FUNCTION|PROCEDURE statement string.
-  @param[in] def_str_length length of the def_str.
+  @param[in] stmt_str                 CREATE statement string.
+  @param[in] stmt_length              Length of the stmt_str.
+  @param[in] definer_version_str      Minimal MySQL version number when
+                                      DEFINER clause is supported in the
+                                      given statement.
+  @param[in] definer_version_length   Length of definer_version_str.
+  @param[in] stmt_version_str         Minimal MySQL version number when the
+                                      given statement is supported.
+  @param[in] stmt_version_length      Length of stmt_version_str.
+  @param[in] keyword_str              Keyword to look for after CREATE.
+  @param[in] keyword_length           Length of keyword_str.
 
   @return pointer to the new allocated query string.
 */
 
-static char *cover_definer_clause_in_sp(const char *def_str,
-                                        uint def_str_length)
+static char *cover_definer_clause(const char *stmt_str,
+                                  uint stmt_length,
+                                  const char *definer_version_str,
+                                  uint definer_version_length,
+                                  const char *stmt_version_str,
+                                  uint stmt_version_length,
+                                  const char *keyword_str,
+                                  uint keyword_length)
 {
-  char *query_str= NULL;
-  char *definer_begin= my_case_str(def_str, def_str_length,
+  char *definer_begin= my_case_str(stmt_str, stmt_length,
                                    C_STRING_WITH_LEN(" DEFINER"));
-  char *definer_end;
+  char *definer_end= NULL;
+
+  char *query_str= NULL;
+  char *query_ptr;
 
   if (!definer_begin)
     return NULL;
 
   definer_end= my_case_str(definer_begin, strlen(definer_begin),
-                           C_STRING_WITH_LEN(" PROCEDURE"));
+                           keyword_str, keyword_length);
 
   if (!definer_end)
-  {
-    definer_end= my_case_str(definer_begin, strlen(definer_begin),
-                             C_STRING_WITH_LEN(" FUNCTION"));
-  }
+    return NULL;
 
-  if (definer_end)
-  {
-    char *query_str_tail;
+  /*
+    Allocate memory for new query string: original string
+    from SHOW statement and version-specific comments.
+  */
+  query_str= alloc_query_str(stmt_length + 23);
 
-    /*
-      Allocate memory for new query string: original string
-      from SHOW statement and version-specific comments.
-    */
-    query_str= alloc_query_str(def_str_length + 23);
-
-    query_str_tail= strnmov(query_str, def_str, definer_begin - def_str);
-    query_str_tail= strmov(query_str_tail, "*/ /*!50020");
-    query_str_tail= strnmov(query_str_tail, definer_begin,
-                            definer_end - definer_begin);
-    query_str_tail= strxmov(query_str_tail, "*/ /*!50003",
-                            definer_end, NullS);
-  }
+  query_ptr= strnmov(query_str, stmt_str, definer_begin - stmt_str);
+  query_ptr= strnmov(query_ptr, C_STRING_WITH_LEN("*/ /*!"));
+  query_ptr= strnmov(query_ptr, definer_version_str, definer_version_length);
+  query_ptr= strnmov(query_ptr, definer_begin, definer_end - definer_begin);
+  query_ptr= strnmov(query_ptr, C_STRING_WITH_LEN("*/ /*!"));
+  query_ptr= strnmov(query_ptr, stmt_version_str, stmt_version_length);
+  query_ptr= strxmov(query_ptr, definer_end, NullS);
 
   return query_str;
 }
@@ -1922,6 +1870,8 @@ static uint dump_events_for_db(char *db)
         */
         if (strlen(row[3]) != 0)
         {
+          char *query_str;
+
           if (opt_drop)
             fprintf(sql_file, "/*!50106 DROP EVENT IF EXISTS %s */%s\n", 
                 event_name, delimiter);
@@ -1948,31 +1898,36 @@ static uint dump_events_for_db(char *db)
                                 row[4],   /* character_set_results */
                                 row[5]);  /* collation_connection */
           }
-            else
-            {
-              /*
-                mysqldump is being run against the server, that does not
-                provide character set information in SHOW CREATE
-                statements.
+          else
+          {
+            /*
+              mysqldump is being run against the server, that does not
+              provide character set information in SHOW CREATE
+              statements.
 
-                NOTE: the dump may be incorrect, since character set
-                information is required in order to restore event properly.
-              */
+              NOTE: the dump may be incorrect, since character set
+              information is required in order to restore event properly.
+            */
 
-              fprintf(sql_file,
-                      "--\n"
-                      "-- WARNING: old server version. "
-                        "The following dump may be incomplete.\n"
-                      "--\n");
-            }
+            fprintf(sql_file,
+                    "--\n"
+                    "-- WARNING: old server version. "
+                      "The following dump may be incomplete.\n"
+                    "--\n");
+          }
 
           switch_sql_mode(sql_file, delimiter, row[1]);
 
           switch_time_zone(sql_file, delimiter, row[2]);
 
+          query_str= cover_definer_clause(row[3], strlen(row[3]),
+                                          C_STRING_WITH_LEN("50117"),
+                                          C_STRING_WITH_LEN("50106"),
+                                          C_STRING_WITH_LEN(" EVENT"));
+
           fprintf(sql_file,
                   "/*!50106 %s */ %s\n",
-                  (const char *) row[3],
+                  (const char *) (query_str != NULL ? query_str : row[3]),
                   (const char *) delimiter);
 
           restore_time_zone(sql_file, delimiter);
@@ -2127,7 +2082,16 @@ static uint dump_routines_for_db(char *db)
               fprintf(sql_file, "/*!50003 DROP %s IF EXISTS %s */;\n",
                       routine_type[i], routine_name);
 
-            query_str= cover_definer_clause_in_sp(row[2], strlen(row[2]));
+            query_str= cover_definer_clause(row[2], strlen(row[2]),
+                                            C_STRING_WITH_LEN("50020"),
+                                            C_STRING_WITH_LEN("50003"),
+                                            C_STRING_WITH_LEN(" FUNCTION"));
+
+            if (!query_str)
+              query_str= cover_definer_clause(row[2], strlen(row[2]),
+                                              C_STRING_WITH_LEN("50020"),
+                                              C_STRING_WITH_LEN("50003"),
+                                              C_STRING_WITH_LEN(" PROCEDURE"));
 
             if (mysql_num_fields(routine_res) >= 6)
             {
@@ -2806,8 +2770,10 @@ static int dump_trigger(FILE *sql_file, MYSQL_RES *show_create_trigger_rs,
 
   while ((row= mysql_fetch_row(show_create_trigger_rs)))
   {
-    char *query_str= cover_definer_clause_in_trigger(row[2], strlen(row[2]));
-
+    char *query_str= cover_definer_clause(row[2], strlen(row[2]),
+                                          C_STRING_WITH_LEN("50017"),
+                                          C_STRING_WITH_LEN("50003"),
+                                          C_STRING_WITH_LEN(" TRIGGER"));
 
     if (switch_db_collation(sql_file, db_name, ";",
                             db_cl_name, row[5], &db_cl_altered))
